# py-dgemm

./: .gitignore  Containerfile-CPU.yaml  Dockerfile  README.md  benchmark.py  cupy-data-type-study.py  cupy-dgemm.py  cupy-explore.py  cupy-profile.py  cupy-profiler.py  cupy-python-time-compare.py  cupy-time-compare-plot.py  data-type-plot.py  heatmap.py  job-script-mpi.py  job-script.sh  python-dgemm-mpi.py  python-dgemm-njit.py  python-dgemm.py  sample  script.sh  slurm-25586769.out  slurm-25594386.out  slurm-26544861.out  study  test.py  type-comparison.py  violin.py
blas-perf/: blis  cray  fast-mkl  mkl  ob-omp  ob-pth  p_blis  p_cray  p_fast-mkl  p_mkl  p_ob-omp  p_ob-pth
cpp-dgemm/aocc-blas/: CMakeLists.txt
cpp-dgemm/aocc-blas-omp/: CMakeLists.txt
cpp-dgemm/blis-openmp/: CMakeLists.txt  benchmark.cpp  build-blis-openmp.sh
cpp-dgemm/blis-openmp/lib/lib/: libblis.so.4  libblis.so.4.0.0
cpp-dgemm/blis-openmp/lib/share/pkgconfig/: blis.pc
cpp-dgemm/blis-pthread/: CMakeLists.txt  build-blis-pthread.sh
cpp-dgemm/blis-pthread/lib/lib/: libblis.so.4.0.0
cpp-dgemm/blis-pthread/lib/share/pkgconfig/: blis.pc
cpp-dgemm/cray-cpp/: CMakeLists.txt  benchmark  benchmark+pat
cpp-dgemm/fast-mkl-cpp/: CMakeLists.txt  link-mkl.sh
cpp-dgemm/mkl-cpp/: benchmark.cpp  link-mkl.sh
cpp-dgemm/openblas-openmp/: CMakeLists.txt  build-openblas-openmp.sh
cpp-dgemm/openblas-pthread/: CMakeLists.txt  build-openblas-pthread.sh
cuda/: sgemm-global.cu  sgemm_naive.cu  sgemm_smem.cu  test-coleasce.cu
gpu/: cupy-data-type-study.py  cupy-python-time.py  gpu-script.sh
large-output/: slurm-23809148.out  slurm-23814159.out  slurm-23853288.out  slurm-24088312.out  slurm-24116223.out  slurm-24131703.out  slurm-24152573.out
mmul-omp/: CMakeLists.txt  benchmark.cpp  link-mkl.sh  topology
mmul-omp/blas-perf/: blis-perf.out  blis.out  cray  cray-perf.out  cray.out  fast-mkl-perf.out  fast-mkl.out  mkl-perf.out  mkl.out  ob-omp-perf.out  ob-omp.out  p_cray
plots-scripts/: bar-plot.py  barplot-cpu.py  cpu-container-bar.py  cupy-optimal-iterations.py  cupy-profile.py  dot-plot.py  line-graph.py  plot.py  single-dual.py  size-thread-limit.py  violin.py
podman/: Containerfile  script.sh
